tdf#163697: avoid premature handling of following notifications

This avoids re-entry to Document::handleParagraphNotifications, which
already was known to be problematic (see comments in Document::Notify,
and m_bSelectionChangedNotification introduced to avoid one such case).

Change-Id: I9e0b451f13ad109d08b1afc9cc0346cd6049b026
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175879
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins